--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,12 @@
   <title>Document</title>
   <style>
     *{
-      font-family: sans-serif;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
       margin: 10px;
     }
     body{
       text-align: center;
-      background-color: rgb(10, 202, 255);
+      background-color: rgb(211, 22, 94);
       color: rgba(86, 17, 17, 0.836);
     }
   </style>
